fix changes enviroment

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
     <ion-title>
-      Blank
+      Stripe
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-button expand="block" class="ion-margin-top" (click)="paymentSheet()">Payment Sheet</ion-button>
+
+  <ion-button expand="block" class="ion-margin-top" (click)="paymentFlow()">Payment Flow</ion-button>
+
+  <ion-button expand="block" class="ion-margin-top" (click)="applePay()">Apple Pay</ion-button>
+
+  <ion-button expand="block" class="ion-margin-top" (click)="googlePay()">googlePay</ion-button>
+  
 </ion-content>
